objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ARM_discount__c</fullName>
        <label>Analog, RF &amp; Mixed-Signal Design Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (English)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Account (English) 1)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Displays whether the Quote is Active Or Not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Employee Address</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analog_RF_Mixed_Signal_Design_TCV__c</fullName>
        <label>Analog, RF &amp; Mixed-Signal Design TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Maint_Total__c</fullName>
        <label>Annual Maint Total</label>
        <summarizedField>QuoteLineItem.Annual_Maint_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.Part_Number__c</field>
            <operation>contains</operation>
            <value>M1</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attachment_Exhibit_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachment_Exhibit_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachment_Exhibit__c</fullName>
        <label>Attachment/Exhibit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Balance_Curr__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos;&amp; IF(Beginning_Balance__c&lt;0,&quot;-&quot;,&quot;&quot;) &amp; IF(ABS(Beginning_Balance__c) &gt;= 1000000,
TEXT(FLOOR(round(ABS(Beginning_Balance__c),0) / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
ABS(Beginning_Balance__c) &gt;= 1000,
RIGHT(TEXT(FLOOR(round(ABS(Beginning_Balance__c),0) / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(round(ABS(Beginning_Balance__c),0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Balance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Balance__c</fullName>
        <label>Beginning Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_To_City_State_Formatting__c</fullName>
        <description>Formatting City State Zipcode for Conga Temlaltes</description>
        <formula>IF( BillingCity  = &apos;&apos;  ||  BillingState = &apos;&apos;, BillingCity &amp;&quot; &quot;&amp; BillingState &amp;&quot; &quot;&amp; BillingPostalCode , BillingCity &amp;&quot;, &quot;&amp; BillingState &amp;&quot; &quot;&amp; BillingPostalCode)</formula>
        <label>Bill To City State Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_SAP_Id__c</fullName>
        <formula>Bill_To__r.SAP_Customer_ID_Mask__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To SAP Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND ((2 AND 3) OR 4)) OR (5 AND (6 AND 7)) OR 8</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>RenMaint Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.Bill_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>RenMaint Quote</value>
            </filterItems>
            <filterItems>
                <field>Account.Bill_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Billed To)</relationshipLabel>
        <relationshipName>Billed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Three Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Four Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Five Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Six Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Seven Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Total__c</fullName>
        <description>This field summarizes the amount of billing payments.</description>
        <label>Billing Total</label>
        <summarizedField>Billing_Plan__c.Amount__c</summarizedField>
        <summaryForeignKey>Billing_Plan__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTLA #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 OR 2) AND 3)</booleanFilter>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.Apttus__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>Apttus__APTS_Agreement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Legacy Agreement Numbers</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement_99Yr__c</fullName>
        <formula>CDN_Agreement_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDN Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement_Report__c</fullName>
        <formula>IF(ISBLANK( CDN_Agreement2__c), Entry_CDN_Agreement__c ,CDN_Agreement2__r.Name)</formula>
        <label>DTLA #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDN_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTLA #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Agreement__c.Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Parent_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDSJ_Original_Format_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDSJ Original Format Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link with Cadence Entity</description>
        <label>Cadence Entity</label>
        <referenceTo>Cadence_Entity__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Employee City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_zipcode_format_for_report__c</fullName>
        <description>Contains the Formatting for ZIPCODE to CITY place on Reports.</description>
        <formula>If(City__c = &apos;&apos; || State__c =&apos;&apos;,IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems S.r.l.&apos;), City__c&amp;&quot; &quot;&amp;Zipcode__c&amp;&quot; &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems (Canada) Ltd.&apos;), City__c&amp;&quot; &quot;&amp;State__c&amp;&quot; &quot;&amp;Zipcode__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems AB&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot;, &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems S.A.S.&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems GmbH&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c,
IF( OR(Cadence_Entity__r.Ship_To_Country__c = &quot;Belgium&quot;,Cadence_Entity__r.Ship_To_Country__c = &quot;Luxembourg&quot;,Cadence_Entity__r.Ship_To_Country__c = &quot;Netherlands&quot;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c, City__c&amp;&quot; &quot;&amp;State__c&amp;&quot; &quot;&amp;Zipcode__c)))))),IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems S.r.l.&apos;), City__c&amp;&quot;, &quot;&amp;Zipcode__c&amp;&quot; &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems (Canada) Ltd.&apos;), City__c&amp;&quot;, &quot;&amp;State__c&amp;&quot; &quot;&amp;Zipcode__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems AB&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot;, &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems S.A.S.&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c,
IF(ISPICKVAL(Company__c, &apos;Cadence Design Systems GmbH&apos;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c,
IF( OR(Cadence_Entity__r.Ship_To_Country__c = &quot;Belgium&quot;,Cadence_Entity__r.Ship_To_Country__c = &quot;Luxembourg&quot;,Cadence_Entity__r.Ship_To_Country__c = &quot;Netherlands&quot;), Zipcode__c&amp;&quot; &quot;&amp;City__c&amp;&quot; &quot;&amp;State__c, City__c&amp;&quot;, &quot;&amp;State__c&amp;&quot; &quot;&amp;Zipcode__c)))))))</formula>
        <label>City_zipcode_format_for_report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoTerm_Date__c</fullName>
        <label>CoTerm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Sales_Organization__c</referenceTo>
        <relationshipLabel>Quotes (Company)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company where Cadence Employee works.</description>
        <label>Cadence Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence Design Systems (Canada) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Israel) Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Japan) B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems AB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems B.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems GmbH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.A.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems S.r.l.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence Design Systems (Ireland) Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name_Kanji__c</fullName>
        <label>Account Name (Kanji)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_3__c</fullName>
        <label>Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_4__c</fullName>
        <label>Address 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Division_Kanji__c</fullName>
        <label>Account Division (Kanji)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <formula>Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Employee Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &apos; &apos; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Format__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency Code to be used for Quote calculation</description>
        <label>Currency Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Culture_Text__c</fullName>
        <label>Currency Culture</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Culture__c</fullName>
        <description>This Field populates the currency culture based on the quote currency</description>
        <formula>Currency_Culture_Text__c</formula>
        <label>Currency Culture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Description_Text__c</fullName>
        <label>Currency Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Description__c</fullName>
        <formula>Currency_Description_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_IC_Layout_TCV__c</fullName>
        <label>Custom IC Layout TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Product__c</fullName>
        <inlineHelpText>The value entered here will default on the IP Quote Line Items added</inlineHelpText>
        <label>Customer Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_discount__c</fullName>
        <label>Digital Implementation Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Email_Address__c</fullName>
        <label>Delivery Email Address</label>
        <length>192</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Internal Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_IP_Disc__c</fullName>
        <label>Design IP Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_IP_TCV__c</fullName>
        <label>Design IP TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_TCV__c</fullName>
        <label>Digital Implementation TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disposition_Status__c</fullName>
        <description>Tracks the status of the Quote.</description>
        <label>Disposition Status</label>
        <picklist>
            <picklistValues>
                <fullName>Quote Generated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corr Order Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned from OM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Type__c</fullName>
        <label>Duration Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CoTerm</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EA_discount__c</fullName>
        <label>Emulation &amp; Acceleration Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Employee Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <description>First Name of Employee</description>
        <label>Employee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <description>Last Name of Employee</description>
        <label>Employee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Title__c</fullName>
        <formula>&quot;Cadence Employee&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_TCV__c</fullName>
        <label>Emulation &amp; Acceleration TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entity_Code_Integration__c</fullName>
        <label>Entity Code Integration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Entity Code</label>
        <referenceTo>Sales_Organization__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Sales_Organization_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Code_for_Report__c</fullName>
        <formula>If ( Entity_Code_Integration__c== &quot;3000&quot;,
&quot;Cadence Design Systems SAS&quot;,
if(Entity_Code_Integration__c == &quot;3020&quot;,&quot;Cadence Design Systems GmbH&quot;,
if(Entity_Code_Integration__c == &quot;3030&quot;,&quot;Cadence Design Systems Srl&quot;,
if(Entity_Code_Integration__c== &quot;3050&quot;,&quot;Cadence Design Systems Ltd&quot;,
if(Entity_Code_Integration__c == &quot;3060&quot;,&quot;Cadence Design Systems AB&quot;,
if(Entity_Code_Integration__c == &quot;3070&quot;,&quot;Cadence Design Systems (Israel) Ltd&quot;,
if(Entity_Code_Integration__c == &quot;3110&quot;,&quot;Cadence Design Systems (Ireland) Ltd&quot;,
if(Entity_Code_Integration__c == &quot;3250&quot;,&quot;Cadence Design Systems B.V.&quot;,&quot;Cadence Design Systems Inc.&quot;
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Code for Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Code_new__c</fullName>
        <label>Entity Code</label>
        <picklist>
            <picklistValues>
                <fullName>1000-CADENCE (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1040-CADENCE (CANADA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1140-QUICKTURN (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1150-ORCAD (US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000-CADENCE (FRANCE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3020-CADENCE (GERMANY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3030-CADENCE (ITALY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3040-CADENCE (HOLLAND)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3050-CADENCE (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3060-CADENCE (SWEDEN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3070-CADENCE (ISRAEL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3080-ACENT (ITALY)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3110-CADENCE (IRELAND)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3120-SYMBIONICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3230-ORCAD (UK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3250-CADENCE DESIGN SYSTEMS BV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3280-CADENCE (Hungary)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000-CADENCE (TAIWAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5030-CADENCE (KOREA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5080-CADENCE METHODOLGY SERVICES CORPORATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7000-CADENCE (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7040-CADENCE SVC (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7060-ORCAD (JAPAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7100-JAPAN TK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8020-TALITY L.P.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8060-TALITY CANADA CORP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entry_CDN_Agreement__c</fullName>
        <inlineHelpText>Please use this field to enter new DTLA #.</inlineHelpText>
        <label>Enter New DTLA #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_PLMA__c</fullName>
        <inlineHelpText>Please use this field to Enter New PLMA #.</inlineHelpText>
        <label>Enter New PLMA #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_SLMA__c</fullName>
        <inlineHelpText>Please use this field to Enter New SLMA #</inlineHelpText>
        <label>Enter New SLMA #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Comments__c</fullName>
        <description>Comments Ext</description>
        <label>External Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FV_discount__c</fullName>
        <label>Functional Verification Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Employee Fax</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fixed_Coverage_End__c</fullName>
        <label>Fixed Coverage End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Coverage_Start__c</fullName>
        <label>Fixed Coverage Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flexible_Amount_Curr__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp; TEXT( Flexible_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flexible Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flexible_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Flexible Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Details__c</fullName>
        <inlineHelpText>Please enter [City, State, Country] of destination for this hardware.</inlineHelpText>
        <label>Freight Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <label>Freight Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_TCV__c</fullName>
        <label>Functional Verification TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Generate_Date__c</fullName>
        <label>Generated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Format_Ren__c</fullName>
        <description>used in renewal maintenance report</description>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos; &amp;  IF(Grand_Total_Ren__c &lt; 0,&quot;-&quot;,&quot;&quot;) &amp; IF(ABS(Grand_Total_Ren__c) &gt;= 1000000, 
TEXT(FLOOR(round(ABS(Grand_Total_Ren__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
ABS(Grand_Total_Ren__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(ABS(Grand_Total_Ren__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(ABS(Grand_Total_Ren__c),0))), 3)</formula>
        <label>Grand Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Format__c</fullName>
        <formula>Quote_Currency_Symbol2__c &amp; &apos; &apos;&amp; IF(Total_Extended_Price__c-One_Time_Adjustment__c&lt;0,&quot;-&quot;,&quot;&quot;) &amp; IF(ABS(Total_Extended_Price__c-One_Time_Adjustment__c) &gt;= 1000000, 
TEXT(FLOOR(round(ABS(Total_Extended_Price__c-One_Time_Adjustment__c),0) / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
ABS(Total_Extended_Price__c-One_Time_Adjustment__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR(round(ABS(Total_Extended_Price__c-One_Time_Adjustment__c),0) / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(ABS(Total_Extended_Price__c-One_Time_Adjustment__c),0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Ren__c</fullName>
        <formula>Total_Extended_Price__c   -   Total_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>